# agent-framework-sdk-lab

./: .env.example  README.md  pyproject.toml
claude/: README.md
copilot/: 01_basic_agent.py  07_multi_agent_workflow.py
examples/: 02_function_tools.py  03_streaming.py  04_multi_turn.py  05_permissions.py  06_mcp_servers.py
openai/: README.md
